fix horizontal scroll on ipads

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,7 +39,6 @@ h6,
 dt,
 figcaption {
   text-wrap: balance;
-  max-inline-size: 25ch;
 }
 
 h1 {
